# clox

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: scanner.h  string.h
src/: CMakeLists.txt  foo.c  main.c  repl.c  repl.h  string.c  string_util.c  string_util.h
test/: test_main.c
tests/: CMakeLists.txt  test_main.c  test_repl.c  test_repl.h  test_string_util.c  test_string_util.h
